Closed Bug 1931978 Opened 3 months ago Closed 3 months ago

IPCFuzzController is missing PNotification as toplevel actor

Categories

(Core :: Fuzzing, defect)

All
Linux
defect

Tracking

()

RESOLVED FIXED
134 Branch
Tracking Status
firefox-esr115 --- unaffected
firefox-esr128 --- unaffected
firefox132 --- unaffected
firefox133 --- unaffected
firefox134 --- fixed

People

(Reporter: truber, Assigned: truber)

References

(Regression)

Details

(Keywords: regression)

Attachments

(1 file)

No description provided.
Pushed by jdschwa@gmail.com: https://hg.mozilla.org/integration/autoland/rev/b73cd9b085ac Add PNotification to IPCFuzzController r=decoder
Status: ASSIGNED → RESOLVED
Closed: 3 months ago
Resolution: --- → FIXED
Target Milestone: --- → 134 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: