Bug 1931978 - Add PNotification to IPCFuzzController r=decoder

Differential Revision: https://phabricator.services.mozilla.com/D229409