tools/fuzzing/ipc/IPCFuzzController.cpp
@@ -81,6 +81,7 @@ IPCFuzzController::IPCFuzzController()
   portNameToIndex["PRemoteWorkerService"] = 10;
   portNameToIndex["PBackgroundLSDatabase"] = 11;
   portNameToIndex["PRemoteWorkerNonLifeCycleOpController"] = 12;
+  portNameToIndex["PNotification"] = 13;
 
   // Used to select the n-th trigger message as a starting point for fuzzing
   // in single message mode. A value of 1 will skip the first matching message
